--- a/personal_music_langgraph_replicate.ipynb
+++ b/personal_music_langgraph_replicate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "id": "dc6a60bc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "id": "0d072e90",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "id": "e2ed431b",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "debf9c0c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
     "Valence = Annotated[float, Field(ge=-1.0, le=1.0)]\n",
     "Arousal = Annotated[float, Field(ge=0.0, le=1.0)]\n",
     "BPM     = Annotated[int,   Field(ge=50,  le=140)]\n",
-    "DurSec  = Annotated[int,   Field(ge=30,   le=90)] # 음악 재생시간(30초 ~ 90초)\n",
+    "DurSec  = Annotated[int,   Field(ge=60,   le=90)] # 음악 재생시간(60초 ~ 90초)\n",
     "\n",
     "class EmotionResult(BaseModel):\n",
     "    primary: str\n",
@@ -85,7 +85,7 @@
     "class MusicBrief(BaseModel):\n",
     "    mood: str\n",
     "    bpm: BPM = 90\n",
-    "    key: str = \"C major\"\n",
+    "    key: str\n",
     "    duration_sec: DurSec = 60               # 음악 기본 재생시간 60초\n",
     "    instruments: List[str] = []\n",
     "    style_tags: List[str] = []\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "id": "6f4057eb",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "id": "36626a91",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "d8c3ad5d",
    "metadata": {},
    "outputs": [],
@@ -150,11 +150,22 @@
     "    llm = get_llm()\n",
     "    emo: EmotionResult = state[\"emotion\"]\n",
     "    sys = (\n",
-    "        \"너는 음악 감독이다. 아래 감정 분석과 사용자 텍스트를 참고해 \"\n",
-    "        \"치유/안정 목적의 짧은 BGM을 위한 Music Brief를 JSON으로 만들어라. \"\n",
-    "        \"bpm=50~140, duration_sec=30~90, key는 'C major' 같은 형식. \"\n",
-    "        \"prompt는 영어로 핵심 악기/무드/다이내믹을 간결히 포함.\"\n",
-    "    )\n",
+    "    \"너는 음악 감독이다. 아래 감정 분석과 사용자 텍스트를 참고해 \"\n",
+    "    \"치유/안정 목적의 짧은 BGM을 위한 Music Brief를 JSON으로 만들어라.\\n\"\n",
+    "    \"대체로 다음 규칙을 따른다:\\n\"\n",
+    "    \"1) bpm: 50~140. arousal이 높을수록 빠르게(대략 60 + arousal*40), 낮을수록 느리게.\\n\"\n",
+    "    \"2) duration_sec: 60~90. valence<=-0.2 또는 arousal>0.6이면 78~90, 그 외 60~78.\\n\"\n",
+    "    \"3) key: valence>=0.2 → 메이저(C/G/F/D major 등), valence<=-0.2 → 마이너(A/D/E/B minor 등), 그 외엔 두 계열 중 선택. \"\n",
+    "    \"'C major'를 기본값으로 반복 사용하지 말 것.\\n\"\n",
+    "    \"4) instruments: 2~4개. 기본은 warm piano, soft pad 중심. \"\n",
+    "    \"불안/고각성(arousal>0.6)에는 light percussion/gentle pulse를 소량, \"\n",
+    "    \"우울(valence<-0.2)에는 strings 또는 soft choir를 권장.\\n\"\n",
+    "    \"5) style_tags: 3~5개 (예: calming, minimal, warm, ambient, breathing).\\n\"\n",
+    "    \"6) prompt: 영어 한 문장, 25단어 이내. 악기/무드/다이내믹/리듬 강도(soft/very soft 등)를 포함하되 \"\n",
+    "    \"숫자(bpm/duration/key)는 넣지 말 것.\\n\"\n",
+    "    \"7) JSON만 출력. 추가 설명 금지.\\n\"\n",
+    "    )  \n",
+    "\n",
     "    usr = (\n",
     "        f\"# Emotion\\nprimary={emo.primary}, valence={emo.valence}, \"\n",
     "        f\"arousal={emo.arousal}, confidence={emo.confidence}\\n\\n\"\n",
@@ -166,9 +177,9 @@
     "        {\"role\":\"user\",\"content\":usr}\n",
     "    ])\n",
     "\n",
-    "# ▼ duration 보정 (30~90초로 강제)\n",
-    "    if brief.duration_sec < 30:\n",
-    "        brief = brief.model_copy(update={\"duration_sec\": 30})\n",
+    "# ▼ duration 보정 (60~90초로 강제)\n",
+    "    if brief.duration_sec < 60:\n",
+    "        brief = brief.model_copy(update={\"duration_sec\": 60})\n",
     "    elif brief.duration_sec > 90:\n",
     "        brief = brief.model_copy(update={\"duration_sec\": 90})\n",
     "\n",
@@ -178,47 +189,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01898d2f",
+   "execution_count": 70,
+   "id": "fd8cb784",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5) Replicate(Stable Audio 2.5) 호출 함수\n",
-    "import time, tempfile, requests, soundfile as sf, os, numpy as np\n",
-    "import replicate\n",
-    "\n",
-    "# 모델 버전은 바뀔 수 있음 — 404 나오면 Replicate 모델 페이지에서 최신 버전ID로 교체\n",
-    "MODEL_ID = \"stability-ai/stable-audio-2.5:46a2601577d0e31aa99b03c9d7fd2142fa3b96a282338758f794b620e35c75b7\"\n",
+    "# # 5) Replicate(Stable Audio 2.5) 호출 함수\n",
+    "# 상단 import에 추가\n",
+    "from urllib.parse import urlparse\n",
     "\n",
     "def generate_with_replicate_strict(prompt: str, duration: int) -> str:\n",
     "    tok = os.getenv(\"REPLICATE_API_TOKEN\")\n",
     "    assert tok, \"REPLICATE_API_TOKEN이 없습니다 (.env 확인)\"\n",
-    "    assert 30 <= int(duration) <= 90, f\"duration(초)은 30~90 범위여야 합니다: {duration}\"\n",
+    "    assert 60 <= int(duration) <= 90, f\"duration(초)은 60~90 범위여야 합니다: {duration}\"\n",
     "\n",
-    "    # 1) 모델 실행\n",
-    "    urls = replicate.run(MODEL_ID, input={\"prompt\": prompt, \"duration\": int(duration)})\n",
-    "    if not (isinstance(urls, list) and urls):\n",
-    "        raise RuntimeError(f\"Replicate 결과 비어있음: {urls}\")\n",
-    "\n",
-    "    # 2) 결과 파일 다운로드 → 포맷 자동 감지 후 모노 WAV 저장\n",
-    "    url = urls[0]\n",
-    "    r = requests.get(url, timeout=120); r.raise_for_status()\n",
-    "\n",
-    "    with tempfile.NamedTemporaryFile(suffix=\".bin\", delete=True) as tmp:\n",
-    "        tmp.write(r.content); tmp.flush()\n",
-    "        data, sr = sf.read(tmp.name)     # mp3/wav 자동\n",
-    "        if data.ndim > 1:\n",
-    "            data = data.mean(axis=1).astype(\"float32\")\n",
+    "    # 최신 클라이언트는 기본적으로 FileOutput을 반환\n",
+    "    out = replicate.run(MODEL_ID, input={\"prompt\": prompt, \"duration\": int(duration)})\n",
+    "    first = out[0] if isinstance(out, (list, tuple)) else out\n",
     "\n",
     "    os.makedirs(\"outputs\", exist_ok=True)\n",
-    "    out_path = f\"outputs/stableaudio_{int(time.time())}.wav\"\n",
-    "    sf.write(out_path, data, sr)\n",
-    "    return out_path\n"
+    "    ts = int(time.time())\n",
+    "\n",
+    "    # 1) FileOutput (권장 경로) - .read()로 바로 저장\n",
+    "    if hasattr(first, \"read\"):  # file-like (FileOutput)\n",
+    "        # 확장자 추정: URL 있으면 거기서 뽑기\n",
+    "        ext = \".bin\"\n",
+    "        url_attr = getattr(first, \"url\", None)  # FileOutput은 .url을 제공\n",
+    "        if isinstance(url_attr, str):\n",
+    "            ext_candidate = os.path.splitext(urlparse(url_attr).path)[1].lower()\n",
+    "            if ext_candidate:\n",
+    "                ext = ext_candidate\n",
+    "        out_path = f\"outputs/stableaudio_{ts}{ext}\"\n",
+    "        with open(out_path, \"wb\") as f:\n",
+    "            f.write(first.read())  # 전체 바이트 저장\n",
+    "        return out_path\n",
+    "\n",
+    "    # 2) 과거/옵트아웃 경로: URL 문자열\n",
+    "    if isinstance(first, str):\n",
+    "        r = requests.get(first, timeout=120); r.raise_for_status()\n",
+    "        ct = (r.headers.get(\"Content-Type\") or \"\").lower()\n",
+    "        # content-type 또는 URL에서 확장자 추정\n",
+    "        if \"wav\" in ct:\n",
+    "            ext = \".wav\"\n",
+    "        elif \"mpeg\" in ct or \"mp3\" in ct:\n",
+    "            ext = \".mp3\"\n",
+    "        else:\n",
+    "            ext = os.path.splitext(urlparse(first).path)[1] or \".bin\"\n",
+    "        out_path = f\"outputs/stableaudio_{ts}{ext}\"\n",
+    "        with open(out_path, \"wb\") as f:\n",
+    "            f.write(r.content)\n",
+    "        return out_path\n",
+    "\n",
+    "    # 3) 드물게 dict 형태로 오는 경우\n",
+    "    if isinstance(first, dict):\n",
+    "        url = first.get(\"url\") or first.get(\"audio\") or first.get(\"output\")\n",
+    "        if isinstance(url, str):\n",
+    "            r = requests.get(url, timeout=120); r.raise_for_status()\n",
+    "            ext = os.path.splitext(urlparse(url).path)[1] or \".bin\"\n",
+    "            out_path = f\"outputs/stableaudio_{ts}{ext}\"\n",
+    "            with open(out_path, \"wb\") as f:\n",
+    "                f.write(r.content)\n",
+    "            return out_path\n",
+    "\n",
+    "    raise RuntimeError(f\"Unexpected replicate output type: {type(first)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "id": "a8eebb7f",
    "metadata": {},
    "outputs": [],
@@ -241,34 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "48258f27",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DRY_RUN: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 임시) 분기 함수 추가 (credit문제로 인해\n",
-    "def should_generate(state: GraphState) -> str:\n",
-    "    # DRY_RUN=1 이거나 REPLICATE_API_TOKEN 없으면 건너뜀\n",
-    "    dry = os.getenv(\"DRY_RUN\", \"0\") == \"1\"\n",
-    "    has_repl = bool(os.getenv(\"REPLICATE_API_TOKEN\"))\n",
-    "    return \"go\" if (not dry and has_repl) else \"skip\"\n",
-    "\n",
-    "# 임시\n",
-    "os.environ[\"DRY_RUN\"] = \"1\"\n",
-    "print(\"DRY_RUN:\", os.getenv(\"DRY_RUN\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "id": "344a40cd",
    "metadata": {},
    "outputs": [],
@@ -280,24 +291,15 @@
     "\n",
     "workflow.add_edge(START, \"analyze_emotion\")\n",
     "workflow.add_edge(\"analyze_emotion\", \"compose_brief\")\n",
-    "# workflow.add_edge(\"compose_brief\",  \"generate_music\")\n",
-    "# workflow.add_edge(\"generate_music\", END)\n",
-    "\n",
-    "#임시\n",
-    "workflow.add_conditional_edges(\n",
-    "    \"compose_brief\",\n",
-    "    should_generate,\n",
-    "    {\"go\": \"generate_music\", \"skip\": END}\n",
-    ")\n",
+    "workflow.add_edge(\"compose_brief\",  \"generate_music\")\n",
     "workflow.add_edge(\"generate_music\", END)\n",
-    "\n",
     "\n",
     "graph = workflow.compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "4832f17a",
    "metadata": {},
    "outputs": [
@@ -306,29 +308,22 @@
      "output_type": "stream",
      "text": [
       "=== Emotion ===\n",
-      "{'primary': '불안', 'valence': -0.5, 'arousal': 0.7, 'confidence': 0.8, 'reasons': '발표를 앞두고 불안함을 느끼고 있지만, 차분해지고 싶다는 의지가 나타나고 있어 감정의 복합성이 존재함.'}\n",
+      "{'primary': '기쁨', 'valence': 1.0, 'arousal': 0.8, 'confidence': 0.9, 'reasons': '시험 합격이라는 긍정적인 경험으로 인해 기쁜 감정이 표현되고 있으며, 들뜬 상태와 발걸음이 빨라지는 것은 높은 각성을 나타냅니다.'}\n",
       "\n",
       "=== Music Brief ===\n",
-      "{'mood': 'Calm', 'bpm': 70, 'key': 'C major', 'duration_sec': 30, 'instruments': ['Piano', 'Strings', 'Flute'], 'style_tags': ['Ambient', 'Relaxing', 'Meditative'], 'prompt': 'A soothing piano melody with soft strings and gentle flute, creating a calm atmosphere to ease anxiety before a presentation.'}\n",
+      "{'mood': 'Joyful', 'bpm': 100, 'key': 'G major', 'duration_sec': 70, 'instruments': ['warm piano', 'soft pad', 'light percussion'], 'style_tags': ['uplifting', 'energetic', 'bright', 'minimal'], 'prompt': 'A bright and uplifting piece featuring warm piano and soft pads, with a gentle pulse to enhance the joyful mood.'}\n",
       "\n",
-      "=== Provider Used ===\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'provider_used'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(final[\u001b[33m\"\u001b[39m\u001b[33mbrief\u001b[39m\u001b[33m\"\u001b[39m].model_dump())\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m=== Provider Used ===\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfinal\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprovider_used\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m=== Audio Path ===\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;28mprint\u001b[39m(final[\u001b[33m\"\u001b[39m\u001b[33maudio_path\u001b[39m\u001b[33m\"\u001b[39m])\n",
-      "\u001b[31mKeyError\u001b[39m: 'provider_used'"
+      "=== Provider Used ===\n",
+      "replicate\n",
+      "\n",
+      "=== Audio Path ===\n",
+      "outputs/stableaudio_1758012347.mp3\n"
      ]
     }
    ],
    "source": [
     "state = {\n",
-    "    \"user_text\": \"오늘 중요한 발표를 앞두고 불안하지만 차분해지고 싶어요.\"\n",
+    "    \"user_text\": \"시험에 합격해서 하루 종일 들떠. 발걸음이 저절로 빨라져\"\n",
     "}\n",
     "final = graph.invoke(state)\n",
     "\n",
@@ -336,10 +331,10 @@
     "print(final[\"emotion\"].model_dump())\n",
     "print(\"\\n=== Music Brief ===\")\n",
     "print(final[\"brief\"].model_dump())\n",
-    "# print(\"\\n=== Provider Used ===\")\n",
-    "# print(final[\"provider_used\"])\n",
-    "# print(\"\\n=== Audio Path ===\")\n",
-    "# print(final[\"audio_path\"])\n"
+    "print(\"\\n=== Provider Used ===\")\n",
+    "print(final[\"provider_used\"])\n",
+    "print(\"\\n=== Audio Path ===\")\n",
+    "print(final[\"audio_path\"])"
    ]
   }
  ],
