--- a/personal_music_langgraph_mock.ipynb
+++ b/personal_music_langgraph_mock.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c158de7f",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "60407c8f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4bfe84b9",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "222c3e42",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9a3f9579",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "80e66319",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "1bc2e88d",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "06e17820",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "3c42fc4c",
    "metadata": {},
    "outputs": [
@@ -348,16 +348,16 @@
      "output_type": "stream",
      "text": [
       "=== Emotion ===\n",
-      "{'primary': '긴장', 'valence': -0.5, 'arousal': 0.7, 'confidence': 0.8, 'reasons': '면접을 앞두고 느끼는 긴장감과 불안감 때문입니다.'}\n",
+      "{'primary': '긴장', 'valence': -0.5, 'arousal': 0.7, 'confidence': 0.8, 'reasons': '면접을 앞두고 떨림과 긴장감이 느껴짐.'}\n",
       "\n",
       "=== Music Brief ===\n",
-      "{'mood': 'calming', 'bpm': 70, 'key': 'C major', 'duration_sec': 30, 'instruments': ['piano', 'strings'], 'style_tags': [], 'prompt': 'A soothing background music to help ease tension before an interview, featuring gentle piano and soft strings.'}\n",
+      "{'mood': 'calming', 'bpm': 70, 'key': 'C major', 'duration_sec': 30, 'instruments': ['piano', 'strings'], 'style_tags': ['ambient', 'relaxing'], 'prompt': 'A soothing background music piece to help calm nerves before an interview, featuring gentle piano and soft strings, creating a tranquil atmosphere.'}\n",
       "\n",
       "=== Provider Used ===\n",
       "mock\n",
       "\n",
       "=== Audio Path ===\n",
-      "outputs/mock_1757666887.wav\n"
+      "outputs/mock_1758006557.wav\n"
      ]
     }
    ],
