--- a/personal_music_langgraph_replicate.ipynb
+++ b/personal_music_langgraph_replicate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "dc6a60bc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "langgraph-env-e8JFwEVd-py3.11",
    "language": "python",
    "name": "python3"
   },
