--- a/no_credit.ipynb
+++ b/no_credit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5fe9af73",
    "metadata": {},
    "outputs": [
@@ -11,10 +11,10 @@
      "output_type": "stream",
      "text": [
       "=== Emotion ===\n",
-      "{'primary': '편안함', 'valence': 0.8, 'arousal': 0.3, 'confidence': 0.9, 'reasons': '차를 마시며 느긋하게 정리하고 싶다는 표현에서 편안한 감정이 드러남.'}\n",
+      "{'primary': '긴장', 'valence': -0.5, 'arousal': 0.8, 'confidence': 0.9, 'reasons': '손바닥에 땀이 맺히고 말이 빨라질까 걱정하는 행동에서 긴장감이 드러남.'}\n",
       "\n",
       "=== Music Brief ===\n",
-      "{'mood': 'calming', 'bpm': 80, 'key': 'C major', 'duration_sec': 75, 'instruments': ['warm piano', 'soft pad', 'light percussion'], 'style_tags': ['calming', 'ambient', 'minimal', 'regulate:sustain'], 'prompt': 'A warm piano gently flows with soft pads, creating a serene ambiance for a relaxed and organized mindset.'}\n"
+      "{'mood': 'calming', 'bpm': 80, 'key': 'D minor', 'duration_sec': 90, 'instruments': ['warm piano', 'soft pad', 'light percussion'], 'style_tags': ['calming', 'ambient', 'regulate:soothe'], 'prompt': 'A gentle, soothing atmosphere with soft piano and warm pads, creating a calming space to ease tension before a presentation.'}\n"
      ]
     }
    ],
@@ -71,6 +71,8 @@
     "        \"당신은 심리 정서를 요약하는 분석가입니다. \"\n",
     "        \"사용자 텍스트에서 주요 감정을 한 단어(또는 짧은 구)로 도출하고, \"\n",
     "        \"valence(-1~1), arousal(0~1), confidence(0~1)을 추정하세요. \"\n",
+    "        \"사용자 텍스트는 서술형일 수 있으며 직접적 요청이 없을 수 있다. \"\n",
+    "        \"장면·행동·몸의 단서만으로 valence/arousal을 추정하라.\"\n",
     "        \"반드시 EmotionResult(JSON 스키마)에 맞춰 응답하세요.\"\n",
     "    )\n",
     "    structured = llm.with_structured_output(EmotionResult)\n",
@@ -115,6 +117,8 @@
     "    \"8) prompt: 영어 한 문장, 18~25단어. 악기·무드·질감·다이내믹을 서술하되 숫자(BPM/key/duration) 금지. \"\n",
     "    \"   사용자의 텍스트에서 핵심 단어 1~2개를 분위기 단서로 녹여라(직역 금지, 뉘앙스만 반영).\\n\"\n",
     "    \"9) JSON만 출력. 추가 설명 금지.\\n\"\n",
+    "    \"사용자 텍스트에 요청이 없어도 valence/arousal로 regulation_mode(soothe/uplift/sustain/ground)를 결정하고 \"\n",
+    "    \"style_tags에 'regulate:<mode>'를 포함하라.\"\n",
     ")\n",
     "    usr = (\n",
     "        f\"# Emotion\\nprimary={emo.primary}, valence={emo.valence}, \"\n",
@@ -148,7 +152,7 @@
     "\n",
     "# === 6) 실행 예 ===\n",
     "state = {\n",
-    "    \"user_text\": \"차 한 잔 마시고 느긋하게 정리 모드로 들어가고 싶다.\"\n",
+    "    \"user_text\": \"발표 10분 전, 대기실에서 자료를 넘기는데 손바닥에 땀이 맺혔다. 말이 빨라질까 계속 입술을 만졌다.\"\n",
     "}\n",
     "final = graph.invoke(state)\n",
     "\n",
