--- a/music_generate_text.ipynb
+++ b/music_generate_text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "501c2c53",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "OPENAI ok: True\n",
       "REPLICATE ok: True\n",
-      "USE_REPLICATE: 1\n"
+      "USE_REPLICATE: 0\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "68ccc30e",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "b4e3c684",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
     "Valence = Annotated[float, Field(ge=-1.0, le=1.0)]\n",
     "Arousal = Annotated[float, Field(ge=0.0, le=1.0)]\n",
     "BPM     = Annotated[int,   Field(ge=50,  le=140)]\n",
-    "DurSec  = Annotated[int,   Field(ge=60,  le=90)]  # 60~90초\n",
+    "DurSec  = Annotated[int,   Field(ge=120,  le=180)]  # 120~180초\n",
     "\n",
     "class EmotionResult(BaseModel):\n",
     "    primary: str\n",
@@ -75,7 +75,7 @@
     "    mood: str\n",
     "    bpm: BPM = 90\n",
     "    key: str\n",
-    "    duration_sec: DurSec = 60\n",
+    "    duration_sec: DurSec = 120\n",
     "    instruments: List[str] = []\n",
     "    style_tags: List[str] = []\n",
     "    prompt: str  # 영어 프롬프트\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "405e5f57",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "847d2b78",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "5077d87f",
    "metadata": {},
    "outputs": [],
@@ -153,14 +153,14 @@
     "        \"1) bpm: 50~140 중 선택하되, duration_sec은 60~90으로 제한한다.\\n\"\n",
     "        \"   - arousal↑ → bpm↑ 경향. 단, soothe/ground 전략일 때는 중간 템포(70~100)로 과자극 방지.\\n\"\n",
     "        \"   - uplift 전략(저각성·우울)일 땐 72~90 범위에서 부드럽게 추진.\\n\"\n",
-    "        \"2) duration_sec: 60~90. 불안(arousal>0.6) 또는 우울(valence<-0.2)은 78~90을 우선 고려.\\n\"\n",
+    "        \"2) duration_sec: 120~180. 불안(arousal>0.6) 또는 우울(valence<-0.2)은 150~180을 우선 고려.\\n\"\n",
     "        \"3) key: valence>=0.2 → 메이저(C/G/F/D 등), valence<=-0.2 → 마이너(A/D/E/B 등), \"\n",
     "        \"   중립은 혼합 가능. 동일 키('C major')만 반복 사용 금지.\\n\"\n",
     "        \"4) instruments: 2~4개. 기본은 warm piano, soft pad.\\n\"\n",
     "        \"   - soothe/ground: light percussion는 있어도 아주 절제(brush, soft tick 등), 하이햇/킥 과도 금지.\\n\"\n",
     "        \"   - uplift: strings(legato)나 gentle pulse로 미세한 전진감.\\n\"\n",
     "        \"5) style_tags: 3~6개. 예: calming, minimal, warm, ambient, breathing, focus, regulate:<mode>.\\n\"\n",
-    "        \"6) 구조(권장): 60~90초 안에 intro(짧은 페이드인, 4bar) → body(점진적 레이어, 8~12bar) → \"\n",
+    "        \"6) 구조(권장): 120~180초 안에 intro(짧은 페이드인, 4bar) → body(점진적 레이어, 8~12bar) → \"\n",
     "        \"   outro(2~4bar, 2~3초 페이드아웃). 루프 안전(loop-safe) 문장감 유지.\\n\"\n",
     "        \"7) 안전 가드: 과도한 트랜지언트/왜곡/사이드체인 펌핑/금속성 심벌/저역 과출력 금지. \"\n",
     "        \"   다이내믹은 soft~medium.\\n\"\n",
@@ -182,11 +182,11 @@
     "        {\"role\":\"user\",\"content\":usr}\n",
     "    ])\n",
     "\n",
-    "    # duration 보정 (60~90초로 강제)\n",
-    "    if brief.duration_sec < 60:\n",
-    "        brief = brief.model_copy(update={\"duration_sec\": 60})\n",
-    "    elif brief.duration_sec > 90:\n",
-    "        brief = brief.model_copy(update={\"duration_sec\": 90})\n",
+    "    # duration 보정 (120~180초로 강제)\n",
+    "    if brief.duration_sec < 120:\n",
+    "        brief = brief.model_copy(update={\"duration_sec\": 120})\n",
+    "    elif brief.duration_sec > 180:\n",
+    "        brief = brief.model_copy(update={\"duration_sec\": 180})\n",
     "\n",
     "    state[\"brief\"] = brief\n",
     "    return state"
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "036da407",
    "metadata": {},
    "outputs": [],
@@ -277,14 +277,14 @@
     "def generate_with_replicate_strict(prompt: str, duration: int) -> str:\n",
     "    tok = os.getenv(\"REPLICATE_API_TOKEN\")\n",
     "    assert tok, \"REPLICATE_API_TOKEN이 없습니다 (.env 확인)\"\n",
-    "    assert 60 <= int(duration) <= 90, f\"duration(초)은 60~90 범위여야 합니다: {duration}\"\n",
+    "    assert 120 <= int(duration) <= 180, f\"duration(초)은 120~180 범위여야 합니다: {duration}\"\n",
     "    out = _replicate_run({\"prompt\": prompt, \"duration\": int(duration)}, tok)\n",
     "    return _save_first_output_to_file(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "d19f44d2",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "35a12062",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "f3717930",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "51af93a2",
    "metadata": {},
    "outputs": [
@@ -360,16 +360,16 @@
      "output_type": "stream",
      "text": [
       "=== Emotion ===\n",
-      "{'primary': '지루함', 'valence': -0.5, 'arousal': 0.3, 'confidence': 0.8, 'reasons': '페이지를 넘기는 손이 자주 멈추고 시간이 흐르는 게 느껴지지 않음.'}\n",
+      "{'primary': '지루함', 'valence': -0.5, 'arousal': 0.3, 'confidence': 0.8, 'reasons': '페이지를 넘기는 손이 자주 멈췄고, 시간이 흐르는 게 잘 느껴지지 않았다는 점에서 지루함을 느꼈을 가능성이 높음.'}\n",
       "\n",
       "=== Music Brief ===\n",
-      "{'mood': 'reflective', 'bpm': 80, 'key': 'C minor', 'duration_sec': 85, 'instruments': ['warm piano', 'soft pad', 'gentle strings'], 'style_tags': ['calming', 'minimal', 'ambient', 'regulate:soothe'], 'prompt': 'A gentle piano and soft pad create a reflective atmosphere, with strings subtly weaving in, inviting a sense of calm and presence.'}\n",
+      "{'mood': 'calm and reflective', 'bpm': 80, 'key': 'C minor', 'duration_sec': 150, 'instruments': ['warm piano', 'soft pad', 'gentle strings'], 'style_tags': ['calming', 'ambient', 'minimal', 'regulate:soothe'], 'prompt': 'A gentle piano with soft strings creates a serene atmosphere, inviting you to reflect and find peace amidst the stillness.'}\n",
       "\n",
       "=== Provider Used ===\n",
-      "rest\n",
+      "skipped\n",
       "\n",
       "=== Audio Path ===\n",
-      "outputs/stableaudio_1758040646.mp3\n"
+      "None\n"
      ]
     }
    ],
