--- a/personal_music_langgraph_replicate.ipynb
+++ b/personal_music_langgraph_replicate.ipynb
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langgraph-env-e8JFwEVd-py3.11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
